# tt-chromium

chrome/: chrome_paks.gni
chrome/app/: chrome_command_ids.h  chromeos_strings.grdp  chromium_strings.grd  generated_resources.grd  google_chrome_strings.grd  password_manager_ui_strings.grdp  settings_chromium_strings.grdp  settings_strings.grdp  shared_settings_strings.grdp
chrome/app/vector_icons/: BUILD.gn  (+2 more)
chrome/browser/: browser_about_handler.cc  chrome_browser_interface_binders.cc  chrome_content_browser_client.cc
chrome/browser/resources/donuts/: BUILD.gn  api_proxy.ts  app.css  app.html.ts  app.ts  donuts.html
chrome/browser/resources/side_panel/chat/: BUILD.gn  chat.css  chat.html  chat_api_proxy.ts  chat_app.html.ts  chat_app.ts
chrome/common/: chrome_paths_linux.cc  chrome_paths_mac.mm  webui_url_constants.h
components/: autofill_payments_strings.grdp  autofill_strings.grdp  components_chromium_strings.grd  components_google_chrome_strings.grd  management_strings.grdp  new_or_sad_tab_strings.grdp  omnibox_pedal_ui_strings.grdp  omnibox_strings.grdp  page_info_strings.grdp  password_manager_strings.grdp  privacy_sandbox_strings.grd  reset_password_strings.grdp  search_engine_choice_strings.grdp  security_interstitials_strings.grdp  send_tab_to_self_strings.grdp  ssl_errors_strings.grdp  version_ui_strings.grdp
components/resources/: search_engine_choice_scaled_resources.grdp
components/search_engines/: prepopulated_engines.json  search_engine_countries-inc.cc  template_url_prepopulate_data.cc
components/version_info/: version_info_with_user_agent.cc  version_info_with_user_agent.h
content/common/: url_schemes.cc
content/renderer/: render_thread_impl.cc
tools/gritsettings/: resource_ids.spec
(+77 files in other folders)
