import("//ui/webui/resources/tools/build_webui.gni")

build_webui("build") {
    grd_prefix = "side_panel_chat"

    static_files = [ "chat.html", "chat.css" ]

    non_web_component_files = [ "chat_api_proxy.ts", "chat_app.ts", "chat_app.html.ts" ]
    css_files = [ "chat_app.css" ]

    # Enable the proper webui_context_type depending on whether implementing
    # a chrome:// or chrome-untrusted:// page.
    webui_context_type = "trusted"
    ts_deps = [
        "//third_party/lit/v3_0:build_ts",
        "//ui/webui/resources/js:build_ts",
        "//ui/webui/resources/mojo:build_ts",
    ]

    mojo_files_deps = [ "//chrome/browser/ui/webui/side_panel/chat:mojo_bindings_ts__generator" ]
    mojo_files = [ "$root_gen_dir/chrome/browser/ui/webui/side_panel/chat/chat.mojom-webui.ts",]
}